@@ -1,4 +1,8 @@
   05 Jun 2014; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
+  hash-slinger-2.5.ebuild, metadata.xml:
+  net-dns/hash-slinger: make sshfp and gnupg conditional
+
+  05 Jun 2014; Hendrik v. Raven (lorem_ipsum) <hendrik@consetetur.de>
   hash-slinger-2.5.ebuild:
   net-dns/hash-slinger added python usedep
 
